# DoclingOptimisation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  output_baseline2.md  output_vlm.md  process.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.firecrawl/: docling-ibm-models-map.txt  docling-ibm-models-readme.md  docling-ibm-ort-search.md  docling-installation.md  docling-perf-discussion.md  docling-pipeline-options.md  layout-predictor-raw.md  layout-predictor.md  onnxruntime-py314.md  ort-threading.md  search-docling-cpu-opt.json  search-docling-docker.json  search-docling-ibm-source.json  search-docling-optimization.json  search-docling-ort-opt.json  search-docling-pipeline.json  search-docling-pyversion.json  search-docling-requirements.json  search-docling-threads.json  search-nogil-compat.json  search-nogil-docker.json  search-ort-graph-opt.json  search-torch-compile.json  search-torch-cpu-opt.json  search-torch-cpu-url.json  search-torch-cpu.json  search-torch-nogil.json  search-uv-latest.json  search-uv-version.json  tableformer-predict.md  tableformer-tree.md  tf-predictor-raw.md  torch-cpu-inference-opt.md  uv-releases.md
